EX-3127: fix overlapping issue on windows

--- a/modules/static/sources/styles/__general.scss
+++ b/modules/static/sources/styles/__general.scss
@@ -6,8 +6,8 @@
 /*===== Onboarding =====*/
 
 #main-window.cqz-onboarding {
-    min-width: 1000px !important;
-    min-height: 760px !important;
+    min-width: 1050px !important;
+    min-height: 768px !important;
 
     &.cqz-step1 {
         #PanelUI-button {
